--- a/src/scss/utils/_reset.scss
+++ b/src/scss/utils/_reset.scss
@@ -10,9 +10,31 @@
     display: none;
 }
 
+html {
+	height: 100vh; // keyboard ios hack
+	background: colors(red);
+	font-family: sans-serif;
+	font-family: -apple-system, Avenir, Roboto, "Open Sans", "Helvetica Neue", sans-serif;
+	font-weight: bold;
+	color: colors(dark-gray);
+	text-rendering: geometricPrecision;
+	-webkit-text-size-adjust: none;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-touch-callout: none; // disable iOS Link Preview
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	color: colors(white);
+}
+
 body {
+	position: fixed;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	width: 100%;
+	touch-action: none;
+	user-select: none;
     padding: 0;
-    overflow: hidden;
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
