--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-@import './scss/utils/_font';
+@import './scss/utils/_fonts';
 @import './scss/utils/_var';
 @import './scss/utils/_reset';
 @import './scss/utils/_breakpoints';
