--- a/src/scss/utils/_reset.scss
+++ b/src/scss/utils/_reset.scss
@@ -12,18 +12,16 @@
 
 html {
 	height: 100vh; // keyboard ios hack
-	background: colors(red);
-	font-family: sans-serif;
+	background: red;
+	color: white;
 	font-family: -apple-system, Avenir, Roboto, "Open Sans", "Helvetica Neue", sans-serif;
 	font-weight: bold;
-	color: colors(dark-gray);
 	text-rendering: geometricPrecision;
 	-webkit-text-size-adjust: none;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-touch-callout: none; // disable iOS Link Preview
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-	color: colors(white);
 }
 
 body {
@@ -31,6 +29,7 @@ body {
 	touch-action: none;
 	user-select: none;
 	padding: 0;
+	margin: 0;
 	min-height: 100vh;
 	text-rendering: optimizeSpeed;
 	line-height: 1.5;
