Switch to Tweakpane 🎨

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import './utils/_fonts';
 @import './utils/_breakpoints';
 @import './utils/_easings';
+@import './utils/_tweakpane';
 
 canvas.sketch {
 	position: fixed;
