--- a/src/scss/utils/_breakpoints.scss
+++ b/src/scss/utils/_breakpoints.scss
@@ -1,7 +1,6 @@
-/**
- * Breakpoints for responsive design
- - By @Waaark
-**/
+/*
+	Credits @Waaark (https://github.com/Waaark) ⚡
+*/
 
 /* Desktop, large size */
 @mixin desktop-lg {
