--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,4 +36,9 @@ div.ui {
 	bottom: 0;
 	user-select: none;
 	pointer-events: none;
+
+	a {
+		pointer-events: all;
+		color: var(--secondary-color);
+	}
 }
