--- a/src/scss/utils/_easings.scss
+++ b/src/scss/utils/_easings.scss
@@ -1,48 +1,46 @@
-$easings: (
-	generic: cubic-bezier(.645, .045, .355, 1),
-	in-cubic: cubic-bezier(.55, .055, .675, .19),
-	out-cubic: cubic-bezier(.215, .61, .355, 1),
-	in-out-cubic: cubic-bezier(.645, .045, .355, 1),
+$ease_generic: cubic-bezier(.645, .045, .355, 1);
+$ease_in-cubic: cubic-bezier(.55, .055, .675, .19);
+$ease_out-cubic: cubic-bezier(.215, .61, .355, 1);
+$ease_in-out-cubic: cubic-bezier(.645, .045, .355, 1);
 
-	in-circ: cubic-bezier(.6, .04, .98, .335),
-	out-circ: cubic-bezier(.075, .82, .165, 1),
-	in-out-circ: cubic-bezier(.785, .135, .15, .86),
+$ease_in-circ: cubic-bezier(.6, .04, .98, .335);
+$ease_out-circ: cubic-bezier(.075, .82, .165, 1);
+$ease_in-out-circ: cubic-bezier(.785, .135, .15, .86);
 
-	in-expo: cubic-bezier(.95, .05, .795, .035),
-	out-expo: cubic-bezier(.19, 1, .22, 1),
-	in-out-expo: cubic-bezier(1, 0, 0, 1),
+$ease_in-expo: cubic-bezier(.95, .05, .795, .035);
+$ease_out-expo: cubic-bezier(.19, 1, .22, 1);
+$ease_in-out-expo: cubic-bezier(1, 0, 0, 1);
 
-	in-quad: cubic-bezier(.55, .085, .68, .53),
-	out-quad: cubic-bezier(.25, .46, .45, .94),
-	in-out-quad: cubic-bezier(.455, .03, .515, .955),
+$ease_in-quad: cubic-bezier(.55, .085, .68, .53);
+$ease_out-quad: cubic-bezier(.25, .46, .45, .94);
+$ease_in-out-quad: cubic-bezier(.455, .03, .515, .955);
 
-	in-quart: cubic-bezier(.895, .03, .685, .22),
-	out-quart: cubic-bezier(.165, .84, .44, 1),
-	in-out-quart: cubic-bezier(.77, 0 .175, 1),
+$ease_in-quart: cubic-bezier(.895, .03, .685, .22);
+$ease_out-quart: cubic-bezier(.165, .84, .44, 1);
+$ease_in-out-quart: cubic-bezier(.77, 0 .175, 1);
 
-	in-quint: cubic-bezier(.755, .05, .855, .06),
-	out-quint: cubic-bezier(.23, 1, .32, 1),
-	in-out-quint: cubic-bezier(.86, 0 .07, 1),
+$ease_in-quint: cubic-bezier(.755, .05, .855, .06);
+$ease_out-quint: cubic-bezier(.23, 1, .32, 1);
+$ease_in-out-quint: cubic-bezier(.86, 0 .07, 1);
 
-	in-sine: cubic-bezier(.47, 0 .745, .715),
-	out-sine: cubic-bezier(.39, .575, .565, 1),
-	in-out-sine: cubic-bezier(.445, .05, .55, .95),
+$ease_in-sine: cubic-bezier(.47, 0 .745, .715);
+$ease_out-sine: cubic-bezier(.39, .575, .565, 1);
+$ease_in-out-sine: cubic-bezier(.445, .05, .55, .95);
 
-	in-back: cubic-bezier(.6, .28, .735, .045),
-	out-back: cubic-bezier(.175, .885, .32, 1.275),
-	in-out-back: cubic-bezier(.68, .55, .265, 1.55),
+$ease_in-back: cubic-bezier(.6, .28, .735, .045);
+$ease_out-back: cubic-bezier(.175, .885, .32, 1.275);
+$ease_in-out-back: cubic-bezier(.68, .55, .265, 1.55);
 
-	out-swift: cubic-bezier(.55, 0, .1, 1),
-	out-snap: cubic-bezier(0, .96, .22, 1),
-	out-snap-2: cubic-bezier(0, .975, 0, 1),
-	out-bounce: cubic-bezier(0, 1.49, .105, .94),
+$ease_out-swift: cubic-bezier(.55, 0, .1, 1);
+$ease_out-snap: cubic-bezier(0, .96, .22, 1);
+$ease_out-snap-2: cubic-bezier(0, .975, 0, 1);
+$ease_out-bounce: cubic-bezier(0, 1.49, .105, .94);
 
-	in-out-bounce: cubic-bezier(.865, -.005, 0, 1.47),
-	in-out-bounce-2: cubic-bezier(.865, -.005, 0, 1.64),
-	in-out-smooth: cubic-bezier(.36, .07, .19, .97),
+$ease_in-out-bounce: cubic-bezier(.865, -.005, 0, 1.47);
+$ease_in-out-bounce-2: cubic-bezier(.865, -.005, 0, 1.64);
+$ease_in-out-smooth: cubic-bezier(.36, .07, .19, .97);
 
-	power4-out: cubic-bezier(.24, 1, .24, 1),
-	power4-in: cubic-bezier(.7, .01, .71, 0),
+$ease_power4-out: cubic-bezier(.24, 1, .24, 1);
+$ease_power4-in: cubic-bezier(.7, .01, .71, 0);
 
-	bounce: cubic-bezier(.19, 1.51, .29, .99)
-);
+$ease_bounce: cubic-bezier(.19, 1.51, .29, .99);
