--- a/src/js/Dom/Components/button/template.html
+++ b/src/js/Dom/Components/button/template.html
@@ -1,5 +1,7 @@
 <div class="cta" size="default">
 	<button>
-		<span>Button</span>
+		<span>
+			<slot name="element">Button</slot>
+		</span>
 	</button>
 </div>
